index.html update + view skeleton

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Standard Metadata -->
+    <title>Embark Studios Open Source | embark.dev</title>
+    <meta name="description" content="Discover open source repositories in Rust, Go, and more from Embark Studios">
+    <meta name="keywords" content="open source, sponsorship, rust">
+    <link rel="icon" href="./favicon.ico">
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Embark Studios Open Source" />
+    <meta property="og:description" content="Discover open source repositories in Rust, Go, and more from Embark Studios" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://embark.dev" />
+    <meta property="og:image" content="https://embark.dev/img/code.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@EmbarkStudios" />
+    <meta name="twitter:image" content="https://embark.dev/img/code.jpg">
+
+    <!-- import CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/style.css">
 </head>
 
 <body>
-    <section id="app"></section>
+    <div id="app"></div>
     <script type="module">
         import init from '/pkg/package.js';
         init('/pkg/package_bg.wasm');
